// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-bhhwZE bPinnG"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
Array [
  <span
    className="sc-bhhwZE bPinnG"
  >
    Default color is Bulma
  </span>,
  <span
    className="sc-bhhwZE dYHvdL"
    color="piccolo.100"
  >
    Piccolo
  </span>,
  <span
    className="sc-bhhwZE cGfEXR"
    color="trunks.100"
  >
    Trunks
  </span>,
  <span
    className="sc-bhhwZE feDBmn"
    color="krillin.100"
  >
    Krillin
  </span>,
]
`;

exports[`Caption renders font weights 1`] = `
Array [
  <span
    className="sc-bhhwZE bPinnG"
  >
    Default font-weight is bold
  </span>,
  <span
    className="sc-bhhwZE faNPDb"
  >
    Font-weight is regular
  </span>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <span
    className="sc-bhhwZE bPinnG"
  >
    Span is a default tag
  </span>,
  <p
    className="sc-bhhwZE bPinnG"
  >
    Paragraph tag
  </p>,
  <label
    className="sc-bhhwZE bPinnG"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <span
    className="sc-bhhwZE bPinnG"
  >
    Default font-size is 10px
  </span>,
  <span
    className="sc-bhhwZE fqxAGv"
    size={9}
  >
    Size is 9px
  </span>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <span
    className="sc-bhhwZE bPinnG"
  >
    Text-align is not specified
  </span>,
  <span
    className="sc-bhhwZE kHqBKJ"
  >
    Centered text
  </span>,
  <span
    className="sc-bhhwZE iFKAOO"
  >
    Right alignment
  </span>,
]
`;
